--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="400dp"
-        android:layout_height="200dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/weather" />
+            android:layout_height="320dp"
+            android:src="@drawable/weather"/>
 
     </android.support.v7.widget.CardView>
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:gravity="bottom"
+        android:layout_height="wrap_content"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_gravity="center_vertical|center_horizontal"
         android:text="SOS"
         android:textAlignment="center"
