--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#07FFE8</color>
+    <!--<color name="colorAccent">#07FFE8</color>-->
+    <color name="colorAccent">@color/colorPrimaryDark</color>
 </resources>
