--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    xmlns:android="http://schemas.android.com/apk/res/android" />
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,19 +18,36 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="320dp"
+            android:layout_height="200dp"
             android:src="@drawable/weather"/>
 
     </android.support.v7.widget.CardView>
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Base.Widget.AppCompat.Button.Colored"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:text="SOS"
-        android:textAlignment="center"
-        android:id="@+id/btn_sos" />
+        android:orientation="vertical">
+
+    <include
+        android:id="@+id/first_row"
+        layout="@layout/include_home_buttons"/>
+
+        <include
+            android:id="@+id/second_row"
+            layout="@layout/include_home_buttons"/>
+
+    </LinearLayout>
+
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--style="@style/Base.Widget.AppCompat.Button.Colored"-->
+        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
+        <!--android:layout_gravity="center_vertical|center_horizontal"-->
+        <!--android:text="SOS"-->
+        <!--android:textAlignment="center"-->
+        <!--android:id="@+id/btn_sos" />-->
 
 </LinearLayout>
+</ScrollView>
