--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -21,7 +21,16 @@
         >
 
 
-
+        <TextView
+            android:id="@+id/temp1"
+            android:layout_width="195dp"
+            android:layout_gravity="center"
+            android:layout_height="78dp"
+            android:elevation="8dp"
+            android:textColor="#000000"
+            android:text="33 C"
+            android:textSize="64sp"
+            android:textAlignment="center" />
 
     </android.support.v7.widget.CardView>
 
