--- a/app/src/main/res/layout/activity_pfz.xml
+++ b/app/src/main/res/layout/activity_pfz.xml
@@ -9,4 +9,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.vickssarv.homescreenf.PFZActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Do you want to know the nearest fishing zone?"
+        android:id="@+id/but_pfz"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:background="@android:color/holo_blue_light"
+        />
 </RelativeLayout>
