--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -23,10 +23,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-<<<<<<< HEAD
-        AIzaSyDtqwPeh5hh1bzP7LvK9-RaEs909k2vdyM
-=======
-        AIzaSyAA7OrL233dUZT7iomNEjeWXM-C7VK796Y
->>>>>>> Akshaya
+        AIzaSyDtqwPeh5hh1bzP7LvK9-RaEs909k2vdyM`
     </string>
 </resources>
