--- a/app/src/main/res/layout/activity_otp_check.xml
+++ b/app/src/main/res/layout/activity_otp_check.xml
@@ -20,49 +20,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:layout_alignBaseline="@+id/textView"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="76dp" />
 
-    <TextView
-        android:text="Name:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:layout_marginTop="38dp"
-        android:layout_marginStart="57dp"
-        android:layout_below="@+id/user"
-        android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="Number:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:id="@+id/textView4"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_below="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_alignBaseline="@+id/textView4"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_alignStart="@+id/textView3" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -89,25 +49,27 @@
         android:textStyle="normal|bold"
         android:textSize="24sp" />
 
-    <Button
-        android:text="Submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
-        android:id="@+id/button2"
-        android:elevation="14dp"
-        android:layout_below="@+id/editText5"
-        android:layout_centerHorizontal="true" />
-
     <TextView
         android:text="An OTP has been sent to your number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="65dp"
         android:id="@+id/textView6"
         android:textSize="12sp"
         android:textColor="#000000"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/user"
+        android:layout_alignStart="@+id/textView7" />
+
+    <Button
+        android:text="Submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
+        android:id="@+id/button2"
+        android:elevation="14dp"
+        android:layout_below="@+id/editText5"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/colorAccent"
+        android:textColor="#FFFFFF"/>
 
 </RelativeLayout>
