--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,64 +1,61 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--<ScrollView --><!--xmlns:card_view="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content">-->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
-    xmlns:android="http://schemas.android.com/apk/res/android" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingLeft="4dp"
     android:paddingRight="4dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
+        card_view:cardBackgroundColor="#f0f8ff"
+        card_view:cardElevation="4dp"
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        card_view:cardBackgroundColor="#f0f8ff"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="4dp"
-        card_view:cardElevation="4dp"
-        >
-
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/temp1"
-            android:layout_width="195dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_height="78dp"
-            android:elevation="8dp"
-            android:textColor="#000000"
             android:text="33 C"
-            android:textSize="64sp"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="64sp" />
 
     </android.support.v7.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
+        android:layout_marginTop="48dp"
+        android:orientation="vertical"
+        android:visibility="visible">
 
-    <include
-        android:id="@+id/first_row"
-        layout="@layout/include_home_buttons"/>
+        <include
+            android:id="@+id/first_row"
+            layout="@layout/include_home_buttons" />
 
         <include
             android:id="@+id/second_row"
-            layout="@layout/include_home_buttons"/>
+            layout="@layout/include_home_buttons" />
 
     </LinearLayout>
 
     <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--style="@style/Base.Widget.AppCompat.Button.Colored"-->
-        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
-        <!--android:layout_gravity="center_vertical|center_horizontal"-->
-        <!--android:text="SOS"-->
-        <!--android:textAlignment="center"-->
-        <!--android:id="@+id/btn_sos" />-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--style="@style/Base.Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
+    <!--android:layout_gravity="center_vertical|center_horizontal"-->
+    <!--android:text="SOS"-->
+    <!--android:textAlignment="center"-->
+    <!--android:id="@+id/btn_sos" />-->
 
-</LinearLayout>
-</ScrollView>
+</LinearLayout><!--</ScrollView>-->
